<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <EditText
        android:id="@+id/txt_number1"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/number_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/number_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/txt_number1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_first"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <EditText
        android:id="@+id/txt_res"
        android:layout_width="329dp"
        android:layout_height="155dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/rad_group"
        android:layout_width="146dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number1"
        app:layout_constraintVertical_bias="0.15">

        <RadioButton
            android:id="@+id/rad_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sum" />

        <RadioButton
            android:id="@+id/rad_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/substract" />

        <RadioButton
            android:id="@+id/rad_multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />

        <RadioButton
            android:id="@+id/rad_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divide" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/check_sum"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:hint="@string/sum"
        android:text="@string/sum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <CheckBox
        android:id="@+id/check_div"
        android:layout_width="152dp"
        android:layout_height="55dp"
        android:hint="@string/divide"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />

    <CheckBox
        android:id="@+id/check_mul"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:hint="@string/multiply"
        android:text="@string/multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <CheckBox
        android:id="@+id/check_sub"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:hint="@string/substract"
        android:text="@string/substract"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

</androidx.constraintlayout.widget.ConstraintLayout>